# Patient-monitoring-device

./: .gitignore  BUILD_AND_TEST_GUIDE.md  DOCUMENTATION_INDEX.md  MANUAL_BUILD_GUIDE.md  MIGRATION_GUIDE.md  QML_BUILD_SIMPLE_GUIDE.md  QML_QUICK_REFERENCE.md  START_HERE_STATUS.md
.claude/: settings.local.json
PatientMonitor/: README.md
PatientMonitor/qml/: CMakeLists.txt  main.cpp  resources.qrc
PatientMonitor/widgets/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  waveformwidget.cpp  waveformwidget.h
